// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`successfully responds with a user id when access token found 1`] = `
Object {
  "body": "{\\"userId\\":\\"USER_ID\\"}",
  "statusCode": 200,
}
`;

exports[`successfully responds with no user id when access token not found 1`] = `
Object {
  "body": "{\\"userId\\":\\"N/A\\"}",
  "statusCode": 200,
}
`;
